--- a/markup/components/header/header.styl
+++ b/markup/components/header/header.styl
@@ -50,6 +50,15 @@
                     +below(1200px)
                         min-width: 100px
 
+                    &_login
+                        min-width: 70px
+
+                        .navbar__link
+                            justify-content: center
+
+                        .navbar__col:last-child
+                            display: none
+
               .search-bar__close
                 margin: 0
                 border: 0
