--- a/markup/pages/registration.pug
+++ b/markup/pages/registration.pug
@@ -8,7 +8,7 @@ include ../components/popup-welcome/popup-welcome
 include ../components/select-city-popup/select-city-popup
 
 block header
-    +header
+    +header(null, true)
 
 block content
     +registration
