--- a/markup/pages/user-fill-profile5.pug
+++ b/markup/pages/user-fill-profile5.pug
@@ -9,7 +9,7 @@ include ../components/select-city-popup/select-city-popup
 include ../components/user-nav/user-nav
 
 block header
-    +header
+    +header(null, true)
         +user-nav-model(1)
 
 block content
