fix range slider

--- a/markup/components/phone-number/phone-number.pug
+++ b/markup/components/phone-number/phone-number.pug
@@ -21,6 +21,9 @@ mixin phone-number()
                                 option(value='4') +4
                                 option(value='5') +5
                                 option(value='6') +6
+                                option(value='7') +7
+                                option(value='8') +8
+                                option(value='9') +9
                 +col(4)
                     +field
                         +field-label Phone number
