--- a/markup/components/range-slider/range-slider.styl
+++ b/markup/components/range-slider/range-slider.styl
@@ -64,6 +64,9 @@
         font-weight: 700
         letter-spacing initial
 
+        +above(1024px)
+            display: none
+
     &__label
         initial-letter initial
         margin-left: 2px
