--- a/markup/components/header/header.styl
+++ b/markup/components/header/header.styl
@@ -153,6 +153,10 @@
         .logo__text
             display: none
 
+        .navbar__item_profile
+            &.active
+                background-color: darkGreyColor
+
         .navbar__link_mob-map
             svg:last-child
                 display: none
