--- a/markup/components/header/header.styl
+++ b/markup/components/header/header.styl
@@ -153,7 +153,7 @@
         .logo__text
             display: none
 
-        .navbar__item_profile
+        .navbar__item_profile .navbar__link
             &.active
                 background-color: darkGreyColor
 
