--- a/markup/components/popup/popup.styl
+++ b/markup/components/popup/popup.styl
@@ -27,6 +27,10 @@
         & ^[0]__wrapper
           align-items: flex-start
 
+    &_overflow_hidden
+        & ^[0]__wrapper
+            overflow hidden
+
     &.active
         display: block
 
