--- a/markup/components/user-dropdown-popup/user-dropdown-popup.styl
+++ b/markup/components/user-dropdown-popup/user-dropdown-popup.styl
@@ -1,15 +1,56 @@
 .user-dropdown-popup
     display: block
     background-color: darkGreyColor
-    padding-left: 31px
-    padding-right: 31px
     width: 100%
     height: 100%
+    overflow-y: scroll
+
+    .follow-us
+        display: block
+
+        &__heading
+            display: block
+            margin-right: 0
+            margin-bottom: 21px
 
     &__row
         display: flex
         width: 100%
+        padding-top: 32px
+        padding-bottom: 36px
+        padding-left: 31px
+        padding-right: 31px
 
+        &:not(:last-child)
+            border-bottom: 1px solid #262728
+
+        &_credits
+            padding-top: 0
+            padding-bottom 0
+
+            & ^[0]__link
+                display: flex
+                justify-content: center
+                padding-top: 21px
+                padding-bottom: 19px
+
+            & ^[0]__col:not(:last-child)
+                border-right: 1px solid #262728
+
+        &:last-child
+            & ^[0]__link
+                display: block
+                line-height 1.88
+
+        &_nav
+            display: block
+
+            & ^[0]__link
+                display: flex
+                align-items: center
+                justify-content: space-between
+                width: 100%
+                line-height 1.88
     &__col
         width: 50%
 
@@ -18,6 +59,7 @@
         letter-spacing 1px
         color #fff
         text-decoration: none
+        text-transform: uppercase
 
         &_color_main
             color: mainColor
