--- a/markup/components/select-city-popup/select-city-popup.styl
+++ b/markup/components/select-city-popup/select-city-popup.styl
@@ -1,4 +1,37 @@
+#select-city
+    +below(1024px)
+        top: 0 !important
+        padding: 0 !important
+
+        .popup__wrapper
+            height: 100vh !important
+
 .select-city-popup
     align-self: flex-start
     width: 100%
     background-color: darkGreyColor
+
+    &__select
+        display: none
+        justify-content: space-between
+        align-items: center
+
+        .popup__close
+            position: static
+            transform: translate(0, 0)
+
+            +below(1024px)
+                display: flex !important
+
+        span
+            font-size 16px
+            color #fff
+            padding-left: 12px
+
+        +below(1024px)
+            display: flex
+
+    .container
+        +below(1024px)
+            padding-left: 31px
+            padding-right: 31px
