fix select-city bb

--- a/markup/components/select-city-popup/select-city-popup.styl
+++ b/markup/components/select-city-popup/select-city-popup.styl
@@ -15,6 +15,7 @@
         display: none
         justify-content: space-between
         align-items: center
+        border-bottom: 1px solid rgba(#efefef, .06)
 
         .popup__close
             position: static
