fix popup profile

--- a/markup/components/profile-popup/profile-popup.pug
+++ b/markup/components/profile-popup/profile-popup.pug
@@ -15,7 +15,7 @@ include ../heading/heading
 include ../user-profile/user-profile
 
 mixin profile-popup()
-    +popup.popup_start#profile-popup
+    +popup.popup_start.popup_no_mobile_paddings#profile-popup
         +b.profile-popup
             +e.button._prev
                 +e.icon-container
