--- a/markup/components/profile-popup/profile-popup.pug
+++ b/markup/components/profile-popup/profile-popup.pug
@@ -17,6 +17,7 @@ include ../user-profile/user-profile
 mixin profile-popup()
     +popup.popup_start.popup_no_mobile_paddings#profile-popup
         +b.profile-popup
+            +popup-close.popup__close_kind_square.popup__close_no_translate
             +e.button._prev
                 +e.icon-container
                     != pugHelpers.Icon.call(locals, {iconName: 'caret', iconWidth: 25, iconHeight: 14})
