--- a/markup/components/terms/terms.pug
+++ b/markup/components/terms/terms.pug
@@ -8,8 +8,10 @@ mixin terms()
             +e.main
                 +e.sidebar
                     +list(true)
-                        +list-item.active
+                        +list-item
                             +list-button(href='#') About Us
+                        +list-item.active
+                            +list-button(href='#') Terms
                         +list-item
                             +list-button(href='#') Privacy
                         +list-item
