--- a/markup/components/terms/terms.styl
+++ b/markup/components/terms/terms.styl
@@ -53,6 +53,7 @@
 
     &__content
         flex: 1
+        padding-top: 15px
 
         .text
-            margin-top: 10px
+            margin-top: 40px
