--- a/markup/components/boost-account/boost-account.styl
+++ b/markup/components/boost-account/boost-account.styl
@@ -10,7 +10,7 @@
         padding-bottom: 32px
 
     .container > .heading
-        margin-top: 47px
+        margin-top: 38px
 
         +below(768px)
             margin-top: 32px
@@ -26,7 +26,7 @@
             margin-top: 0
 
     &__content
-        margin-top: 22px
+        margin-top: 43px
 
         +below(768px)
             margin-top: 9px
@@ -35,7 +35,7 @@
             display: flex
             justify-content: center
             align-items: center
-            min-height: 500px
+            min-height: 639px
 
             +below(768px)
                 min-height: initial
@@ -63,13 +63,16 @@
             margin-bottom: 11px
 
         &:first-child
+            border-top: 1px solid borderColor
+            padding-top: 40px
+
             +below(540px)
                 & > .heading
                     display: none
 
         &:not(:first-child)
-            margin-top: 40px
-            padding-top: 35px
+            margin-top: 37px
+            padding-top: 15px
             border-top: 1px solid borderColor
 
     &__add-more
@@ -113,8 +116,8 @@
         max-width: 330px
 
         &_inner
-            padding-top: 66px
-            padding-bottom: 88px
+            padding-top: 96px
+            padding-bottom: 89px
             margin-left: auto
             margin-right: auto
 
@@ -134,8 +137,6 @@
 
 
         .heading
-            margin-top: 10px
-
             &_md
                 margin-top: 28px
 
