--- a/markup/components/info-control/info-control.styl
+++ b/markup/components/info-control/info-control.styl
@@ -35,6 +35,8 @@
         ellipsis(100%)
         transition(color)
         margin-right: 20px
+        text-transform: uppercase
+        letter-spacing 1px
 
     &__ok
         margin-left: auto
