--- a/markup/components/user-settings/user-settings.styl
+++ b/markup/components/user-settings/user-settings.styl
@@ -9,11 +9,13 @@
         padding-top: 0
 
     .heading
-        margin-top: 47px
+        margin-top: 39px
 
     &__action
         width: 100%
 
+    &__form
+        padding-top: 18px
 
     .grid__col
 
@@ -25,3 +27,6 @@
             width: 100%
 
 
+        &_twelve
+            margin-top: 12px
+            margin-bottom: 33px
