--- a/markup/components/user-messages/user-messages.styl
+++ b/markup/components/user-messages/user-messages.styl
@@ -159,6 +159,7 @@
         justify-content: center
         width: 100%
         height: 100%
+        margin-top: 11px
 
         &-picture
             display: flex
