fix user profile pp

--- a/markup/components/tour-card/tour-card.styl
+++ b/markup/components/tour-card/tour-card.styl
@@ -1,7 +1,7 @@
 .tour-card
     display: block
     background-color: #fff
-    padding: 40px
+    padding: 36px 42px
 
     +below(768px)
         padding: 26px 31px 27px 29px
