user-profile pp

--- a/markup/components/model-info/model-info.styl
+++ b/markup/components/model-info/model-info.styl
@@ -61,8 +61,15 @@
     &__row
         margin-top: 25px
 
+        &:last-child
+            margin-top: 43px
+
         +below(768px)
             margin-top: 20px
+
+            &:last-child
+                margin-top: 30px
+
     &__tour
         margin-top: 52px
 
