--- a/markup/components/user-profile/user-profile.styl
+++ b/markup/components/user-profile/user-profile.styl
@@ -94,6 +94,9 @@
             padding-right: 0
 
         &_agencies
+            &:not(:first-child)
+                margin-top: 40px
+
             & > .heading
                 margin-bottom: 45px
 
