--- a/markup/components/footer/footer.styl
+++ b/markup/components/footer/footer.styl
@@ -1,6 +1,6 @@
 .footer
     display: block
-    padding: (60px - grid-gap) 0 60px 0
+    padding: 14px 0 60px 0
     background-color: darkGreyColor
     min-height: 345px
 
@@ -31,7 +31,7 @@
             border-bottom: 1px solid rgba(#efefef, .06)
 
         &:not(:last-child)
-            margin-bottom: 33px
+            margin-bottom: 13px
 
             +below(768px)
                 margin-bottom: 0
