--- a/markup/components/vip/vip.styl
+++ b/markup/components/vip/vip.styl
@@ -33,6 +33,7 @@
         font-weight 700
         text-transform uppercase
         border-radius: 50%
+        margin-top: 20px
 
     &__heading
         color #fff
