model-list help

--- a/markup/components/model-list/model-list.styl
+++ b/markup/components/model-list/model-list.styl
@@ -10,6 +10,10 @@
         .grid__col_three
             width: 100%
 
+    .help
+        margin-top: -5px
+        margin-bottom: 30px
+
     &__header
         margin-top: 24px
         margin-bottom: 10px
