--- a/markup/components/filter/filter.styl
+++ b/markup/components/filter/filter.styl
@@ -76,6 +76,9 @@
         border-bottom: 0
         background-color: #fff
 
+        .field
+            margin-top: 12px
+
         .grid
             padding-top: 16px
             padding-bottom: 40px
@@ -136,6 +139,9 @@
     background-color darkGreyColor
     padding: 15px 0
 
+    .field
+        margin-top: 0
+
     +above(400px)
         &__rating-heading
             display: flex
@@ -185,7 +191,7 @@
             margin-bottom: 12px
 
     &__row
-        padding: 43px 0
+        padding: 36px 0
 
         &:not(:last-child)
             border-bottom: 1px solid rgba(#efefef, .06)
