--- a/markup/components/agency-card/agency-card.styl
+++ b/markup/components/agency-card/agency-card.styl
@@ -36,7 +36,8 @@
         & ^[0]__rating
             position: relative
             z-index: 3
-            margin-left: 0
+            margin-left: 4px
+            padding-top: 9px
 
             +below(768px)
                 position: absolute
@@ -258,9 +259,6 @@
 
         &_push_right
             margin-left: auto
-
-    .avatar
-        margin-left: -10px
 
     .button
         line-height: 3.125
