--- a/markup/components/agency-list/agency-list.styl
+++ b/markup/components/agency-list/agency-list.styl
@@ -2,15 +2,14 @@
     display: block
     padding-bottom: 40px
 
-    +below(1300px)
-        margin-top: 30px
+    .grid
+        margin-top: -15px
 
     &__header
         display: flex
         justify-content: space-between
         align-items: center
-        margin-top: 32px
-        margin-bottom: 8px
+        margin-top: 30px
 
         .button
             min-width: 164px
