--- a/markup/components/heading/heading.styl
+++ b/markup/components/heading/heading.styl
@@ -20,6 +20,7 @@
         color darkGreyColor
         font-family fontMain
         font-size 20px
+        letter-spacing: 1px
 
         +below(768px)
             font-size: 18px
