--- a/markup/components/agency/agency.styl
+++ b/markup/components/agency/agency.styl
@@ -2,14 +2,8 @@
     display: block
     padding-bottom: 40px
 
-    +below(1300px)
-        padding-top: 30px
-
-    +below(768px)
-        padding-top: 0
-
     &__header
-        margin-top: 32px
+        margin-top: 52px
         background-color: #fff
         box-shadow: 0 20px 50px rgba(29, 29, 29, .02)
 
@@ -200,7 +194,10 @@
 
     &__models
         display: block
-        margin-top: 45px
+        margin-top: 39px
+
+        .grid
+            margin-top: 18px
 
     &__load
         margin-top: 40px
