--- a/markup/components/navbar/navbar.styl
+++ b/markup/components/navbar/navbar.styl
@@ -10,6 +10,7 @@
     &__dropdown
         & ^[0]__item
             min-width: initial
+            min-height: 80px
 
             &:not(:last-of-type)
                 border-right: 0
