--- a/markup/components/popup-welcome/popup-welcome.styl
+++ b/markup/components/popup-welcome/popup-welcome.styl
@@ -57,6 +57,7 @@
         max-width 258px
         flex-grow 1
         letter-spacing 1px
+        flex-basis: 258px
 
         +below(768px)
             max-width 100%
