--- a/markup/components/range-slider/range-slider.styl
+++ b/markup/components/range-slider/range-slider.styl
@@ -24,6 +24,9 @@
         & ^[0]__slider .ui-slider-handle
             background-color: #1e1f20
 
+        & ^[0]__input
+            color: #fff
+
     &__fields
         display: flex
         border: 1px solid borderColor
