--- a/markup/components/selectbox/selectbox.styl
+++ b/markup/components/selectbox/selectbox.styl
@@ -145,7 +145,7 @@
 
         & ^[0]__box
             padding: 0
-            height initial
+            height auto
             border 0
 
         & ^[0]__value
