--- a/markup/components/agency-info/agency-info.styl
+++ b/markup/components/agency-info/agency-info.styl
@@ -51,7 +51,7 @@
         align-items: center
         justify-content: space-between
         border-bottom: 1px solid borderColor
-        min-height: 60px
+        height: 60px
 
     &__col
         width: 50%
