--- a/markup/components/field/field.styl
+++ b/markup/components/field/field.styl
@@ -9,7 +9,7 @@
         font-family fontMain
         font-size 16px
         font-weight 400
-        line-height 3.625
+        height: 60px
         padding: 0 20px
         background-color: transparent
 
