--- a/markup/components/payment-method/payment-method.styl
+++ b/markup/components/payment-method/payment-method.styl
@@ -25,7 +25,7 @@
         justify-content: space-between
         padding: 0 24px
         width: 100%
-        min-height: 60px
+        height: 60px
         text-decoration: none
         border: 1px solid borderColor
         ellipsis(100%)
