--- a/markup/components/add-input/add-input.styl
+++ b/markup/components/add-input/add-input.styl
@@ -32,7 +32,7 @@
             content ''
             display block
             width 1px
-            height 50%
+            flex: 1
             background-color borderColor
 
     &__plus
