--- a/markup/components/navbar/navbar.styl
+++ b/markup/components/navbar/navbar.styl
@@ -17,6 +17,7 @@
 
         & ^[0]__link
               padding: 0
+              height: auto
 
               &:hover
                 opacity: .75
@@ -35,8 +36,9 @@
             border-bottom: 1px solid #262728
 
     &__item
-        display: block
+        display: flex
         min-width: 149px
+        height: 100%
 
         &_filter
             .header__filter-close
@@ -109,11 +111,12 @@
         justify-content: center
         padding: 0 24px
         width: 100%
-        height: 100%
+        flex: 1
         text-decoration: none
         background-color: inherit
         transition(all)
         flex-shrink: 0
+        height: 100%
 
         &_dropdown
             position: relative
