--- a/markup/components/photo-tape/photo-tape.styl
+++ b/markup/components/photo-tape/photo-tape.styl
@@ -2,8 +2,10 @@ photoTapeItemWidth = 88px
 photoTapeItemWidthMobile = 60px
 
 .photo-tape
+    position: relative
     display: block
     background-color: bgColor
+    z-index: 50
 
     .swiper-container
         overflow: visible
