--- a/markup/components/popup-welcome/popup-welcome.styl
+++ b/markup/components/popup-welcome/popup-welcome.styl
@@ -58,6 +58,7 @@
         flex-grow 1
         letter-spacing 1px
         flex-basis: 258px
+        max-height: 60px
 
         +below(768px)
             max-width 100%
