mousemove slide change model-preview feature

--- a/markup/components/model-preview/model-preview.pug
+++ b/markup/components/model-preview/model-preview.pug
@@ -12,8 +12,8 @@ mixin model-preview(photos, name, age, price, isOnline)
                 +e.online
             block
             +e.pagination
-            +e.button._prev
-            +e.button._next
+            //+e.button._prev
+            //+e.button._next
             +e.breakinfo
                 +close._top_right
                 +e.row._top
