--- a/markup/components/selectbox/selectbox.styl
+++ b/markup/components/selectbox/selectbox.styl
@@ -3,7 +3,7 @@
     display: block
 
     &_active
-        & ^[0]__list
+        & ^[0]__list-wrapper
             opacity: 1
             pointer-events all
 
@@ -71,23 +71,35 @@
         display: none
 
     &__list
-        position: absolute
-        top: 100%
         width: 258px
-        left: 0
-        margin-top: 13px
-        box-shadow 0 10px 40px rgba(29, 29, 29, .1)
-        z-index: 100
-        opacity: 0
-        pointer-events none
-        transition(opacity)
-        max-height: 240px
+        overflow-y: auto
+        overflow-x: hidden
+        flex-shrink: 0
+
+        &-wrapper
+            position: absolute
+            top: 100%
+            left: 0
+            display: flex
+            margin-top: 13px
+            width: 258px
+            max-height: 240px
+            pointer-events none
+            opacity: 0
+            transition(opacity)
+            z-index: 100
+            overflow-y: hidden
+            overflow-x: visible
+            box-shadow 0 10px 40px rgba(29, 29, 29, .1)
+
+            &_has_dropdown
+                width: 516px
 
     &__dropdown
         position: absolute
         border-left: 1px solid rgba(#efefef, .06)
         top: 0
-        left: 100%
+        right: 0
         margin-left: -1px
         opacity: 0
         pointer-events: none
@@ -95,6 +107,9 @@
         background-color: darkGreyColor
         transition(opacity)
         width: 258px
+        overflow-y: auto
+        overflow-x: hidden
+        flex-shrink: 0
 
         +below(1024px)
             position: static
