--- a/markup/components/model-list/model-list.pug
+++ b/markup/components/model-list/model-list.pug
@@ -35,7 +35,7 @@ mixin model-list(isHelp)
                     +sort-ui
                 +e.header-col.hide-mob.hide-when-header-fixed
                     +button(href='#' data-popup-id='#model-map' data-action='toggle')._color_white._bg_darkGrey._uppercase.js-toggle-popup View on map
-            +grid-masonry(4, '.js-masonry-item').js-model-preview-grid
+            +grid-masonry({ desktop: 4, laptop: 3, tablet: 2, mobile: 1}).js-model-preview-grid
                 +boost(true).js-masonry-item
                 +model-preview([7, 7, 7], 'Sonya', 20, 325, true).js-masonry-item
                     +badges._top
