--- a/markup/components/profile-photo-popup/profile-photo-popup.styl
+++ b/markup/components/profile-photo-popup/profile-photo-popup.styl
@@ -6,6 +6,7 @@
     max-width: 100vw
     pointer-events none
     overflow: hidden
+    position: relative
 
     +below(1024px)
         flex-direction: row
@@ -59,7 +60,7 @@
                 margin-right: 48px
 
     &__caret-icon
-        stroke: #fff
+        fill: #fff
 
     &__button
         display: flex
@@ -83,7 +84,7 @@
                 transform: translate3d(-100%, 0, 0)
 
             & ^[0]__caret-icon
-                transform: rotate(-180deg)
+                transform: rotate(-90deg)
 
         &_next
             padding-right: 41px
@@ -95,6 +96,7 @@
 
             & ^[0]__caret-icon
                 margin-left: auto
+                transform: rotate(90deg)
 
     &__zoom-icon
         position: absolute
