--- a/markup/components/model-list/model-list.pug
+++ b/markup/components/model-list/model-list.pug
@@ -31,7 +31,7 @@ mixin model-list(isHelp)
                             option(value='Rating') Rating
                             option(value='Price') Price
 
-                +e.header-col.hide-desktop
+                +e.header-col._sort-ui.hide-desktop
                     +sort-ui
                 +e.header-col.hide-mob.hide-when-header-fixed
                     +button(href='#' data-popup-id='#model-map' data-action='toggle')._color_white._bg_darkGrey._uppercase.js-toggle-popup View on map
