--- a/markup/components/model-list/model-list.styl
+++ b/markup/components/model-list/model-list.styl
@@ -30,6 +30,10 @@
             &_flexible
                 flex: 1
 
+            &_sort-ui
+                +above(541px)
+                    display: none
+
     &__control
         min-width: 164px
         height: 60px
