--- a/markup/components/sort-ui/sort-ui.pug
+++ b/markup/components/sort-ui/sort-ui.pug
@@ -1,4 +1,6 @@
 mixin sort-ui()
-    +b.sort-ui&attributes(attributes)
-        != pugHelpers.Icon.call(locals, {iconName: 'sort-1', className: 'sort-ui__icon js-sort-ui-table-view', iconWidth: '16', iconHeight: '16'})
-        != pugHelpers.Icon.call(locals, {iconName: 'sort-2', className: 'sort-ui__icon active js-sort-ui-list-view', iconWidth: '16', iconHeight: '16'})
+    +b.UL.sort-ui&attributes(attributes)
+        +e.LI.item(data-view='list')
+            != pugHelpers.Icon.call(locals, {iconName: 'sort-1', className: 'sort-ui__icon', iconWidth: '16', iconHeight: '16'})
+        +e.LI.item.active(data-view='table')
+            != pugHelpers.Icon.call(locals, {iconName: 'sort-2', className: 'sort-ui__icon', iconWidth: '16', iconHeight: '16'})
